# projeto_tdd_dio

./: .env  pyproject.toml
store/: main.py
